CUSTOM HOOK FOR PACKSTATUSLIST

--- a/src/locales/es/global.json
+++ b/src/locales/es/global.json
@@ -27,6 +27,7 @@
     "it": "Italiano",
     "ko": "Koreano"
   },
+  "loading": "Cargando...",
   "title": {
     "redownload": "Volver a descargar",
     "number_of_cards": "Número de cartas",
