--- a/src/locales/en/global.json
+++ b/src/locales/en/global.json
@@ -1,6 +1,7 @@
 {
   "base_path": "https://marvelcdb.com",
   "card_list": "Card list",
+  "pack_list": "Pack list",
   "cards_per_page": "Cards per page",
   "close": "Close",
   "continue": "Continue",
