--- a/src/locales/es/global.json
+++ b/src/locales/es/global.json
@@ -24,6 +24,7 @@
   },
   "remove_all": "Borrar todos",
   "reset_filters": "Borrar filtros",
+  "reset_app": "Reiniciar applicación",
   "language": "Idioma",
   "language-redownload": "Cambiar el idioma no redescarga las cartas.",
   "lang": {
@@ -49,6 +50,10 @@
     "download_all_packs": {
       "title": "Descargar todos los packs",
       "content": "<p>¿Estas seguro de que quieres <b>descargar todos los packs</b>?</p><p>Esto descargara <b>todas las cartas</b> de <a href='https://es.marvelcdb.com'>MarvelCDB</a> a tu navegador.</p><p>Ejecuta esta acción <b>lo menos podible</b> para no saturar la web.</p>"
+    },
+    "reset_app": {
+      "title": "Reiniciar applicación",
+      "content": "<p>¿Estas seguro de que quieres <b>reiniciar la applicación</b>?</p><p>Esto borrará <b>todas las cartas, packs, idioma...</b> de tu navegador.</p>"
     }
   }
 }
