--- a/src/locales/es/filters.json
+++ b/src/locales/es/filters.json
@@ -29,7 +29,7 @@
     "threat": "Amenaza",
     "thwart": "Intervención",
     
-    "attack_star": "\u2606 en ataque",
+    "attack_star": "* en ataque",
     "base_threat_fixed": "Amenaza base fija",
     "double_sided": "Doble cara",
     "escalation_threat_fixed": "Amenaza de escalada fija",
@@ -38,7 +38,7 @@
     "is_unique": "Es único",
     "permanent": "Permanente",
     "threat_fixed": "Amenaza fija",
-    "thwart_star": "\u2606 en intervención",
+    "thwart_star": "* en intervención",
 
     "filters": "Filtros",
     "contains_filters_title": "Contiene texto",
