Quick search and card actions improved

--- a/src/locales/es/filters.json
+++ b/src/locales/es/filters.json
@@ -1,4 +1,5 @@
 {
+    "quick_search": "Búsqueda rápida",
     "traits": "Rasgos",
     "faction_code": "Facción (código)",
     "pack_code": "Pack (código)",
