--- a/src/locales/en/filters.json
+++ b/src/locales/en/filters.json
@@ -1,4 +1,5 @@
 {
+    "quick_search": "Quick search",
     "traits": "Traits",
     "faction_code": "Faction (code)",
     "pack_code": "Pack (code)",
