Filters working with redux

--- a/src/locales/es/filters.json
+++ b/src/locales/es/filters.json
@@ -14,8 +14,14 @@
     "name": "Nombre",
     "real_name": "Nombre (original)",
     "text": "Texto",
+    "back_text": "Texto (trasero)",
     "real_text": "Texto (original)",
     "subname": "Subnombre",
+    "flavor": "Texto de hambientación",
+    "back_flavor": "Texto de hambientación (trasero)",
+    "illustrator": "Ilustrador",
+    "octgn_id": "ID de OCTGN",
+    "code": "Código",
 
     "cost": "Coste",
     "attack": "Ataque",
