--- a/src/locales/es/filters.json
+++ b/src/locales/es/filters.json
@@ -1,6 +1,7 @@
 {
     "quick_search": "Búsqueda rápida",
     "traits": "Rasgos",
+    "real_traits": "Rasgos (originales)",
     "faction_code": "Facción (código)",
     "pack_code": "Pack (código)",
     "type_code": "Tipo (código)",
