Hide duplicated filter added. Nav pagination cards count updated, total cards on download manager nav item.

--- a/src/locales/en/filters.json
+++ b/src/locales/en/filters.json
@@ -1,5 +1,8 @@
 {
     "quick_search": "Quick search",
+    "show_duplicates": "Show duplicates",
+    "hide_duplicates": "Hide duplicates",
+
     "traits": "Traits",
     "real_traits": "Traits (original)",
     "faction_code": "Faction (code)",
